DT-2004-05-24-0: Bugfix:    o Cleaned up flatfile spooling error codes
                            o Cleaned up qconf error messages
                            o Reworked JAPI initialization to delay GDI calls
                              until necessary
                            o Expanded DRMAA Java binding test program
                            o Renamed DRMAA README
                            o Added -help_arch to distinst
                            o Updated DRMAA man pages
                 Changed:   qconf, flatfile spooling, JAPI, DRMAA
                 Issue:     1005, 1025
                 Review:    AH, SG

SG-2004-05-24-1: Bugfix:    The monitor switch in the scheduler would not turn
                            off, after removing the monitor entry from the 
                            params in the scheduler config.
                 Changed:   scheduler
                 Review:    JG 

SG-2004-05-24-0: Bugfix:    Fixed qstat -j ID output
                 Changed:   qstat
                 Issue:     898
                 Review:    AD

JG-2004-05-24-2: Bugfix:    qdel of non existing job/array task/task range as 
                            admin user produced an incorrect error message.
                 Review:    SG
                 Cleanup:   Removed outdated Insure instrumentation.
                 Testsuite: Adapted testsuite to changed qdel error messages.

JG-2004-05-24-1: Cleanup:   Removed unused I18N messages.

JG-2004-05-24-0: Testsuite: Add $SGE_CELL to testsuite mails.
                            Fixed remote execution of testsuite commands.

JG-2004-05-23-0: Testsuite: Additional changes required for multi cell support.
                            Fixed installation using RPC server.
                            Removed unused testsuite code, macros and scripts.

AD-2004-05-21-0: Bugfix:    If possible use 'sysconf()' to determine group
                            buffer size. If not use increased default value.